--- a/.github/workflows/post-on-pr.yml
+++ b/.github/workflows/post-on-pr.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Get commit details
         id: commit_details
         run: |
-          COMMITS=$(git log --pretty=format:"%s (#%h) (%H)" origin/${{ github.event.pull_request.base.ref }}..origin/${{ github.event.pull_request.head.ref }})
+          COMMITS=$(git log --pretty=format:"%s (#%h) (%H)" ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
           echo "COMMITS<<EOF" >> $GITHUB_OUTPUT
           echo "$COMMITS" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
