use prettier and pnpm workspaces

--- a/daily-standup/package.json
+++ b/daily-standup/package.json
@@ -3,17 +3,18 @@
 	"version": "1.0.0",
 	"scripts": {
 		"start": "ts-node src/index.ts",
-		"watch": "ts-node-dev --respawn --transpile-only src/index.ts"
+		"watch": "ts-node-dev --respawn --transpile-only src/index.ts",
+		"clean": "rm -rf .turbo node_modules"
 	},
 	"devDependencies": {
-		"@types/node": "^20.16.5",
+		"@types/node": "catalog:",
 		"@types/node-cron": "^3.0.11",
-		"ts-node": "^10.9.2",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.5.4"
+		"ts-node": "catalog:",
+		"ts-node-dev": "catalog:",
+		"typescript": "catalog:"
 	},
 	"dependencies": {
-		"dotenv": "^16.4.5",
+		"dotenv": "catalog:",
 		"node-cron": "^3.0.3"
 	}
 }
