--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,10 +9,6 @@
   "printWidth": 120,
   "jsxSingleQuote": true,
   "bracketSpacing": true,
-  "importOrder": [
-    "<BUILTIN_MODULES>",
-    "<THIRD_PARTY_MODULES>",
-    "^[.]"
-  ],
+  "importOrder": ["<BUILTIN_MODULES>", "<THIRD_PARTY_MODULES>", "^[.]"],
   "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-packagejson"]
 }
