--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-	"name": "@campsite/examples",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"clean": "turbo run clean && rm -rf .turbo node_modules",
-		"format": "prettier --write \"**/*.{ts,tsx,md,yml}\""
-	},
-	"devDependencies": {
-		"@ianvs/prettier-plugin-sort-imports": "catalog:",
-		"prettier": "catalog:",
-		"prettier-plugin-packagejson": "catalog:",
-    "turbo": "^2.0.14",
-		"typescript": "catalog:"
-	},
-	"packageManager": "pnpm@9.7.1",
-	"engines": {
-		"node": ">=20.0.0 <21"
-	}
+  "name": "@campsite/examples",
+  "version": "1.0.0",
+  "scripts": {
+    "clean": "turbo run clean && rm -rf .turbo node_modules"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-packagejson": "^2.4.14",
+    "turbo": "^2.0.14"
+  },
+  "packageManager": "pnpm@9.7.1",
+  "engines": {
+    "node": ">=20.0.0 <21"
+  }
 }
