pr alerts: use 'merged' instead of 'closed'

--- a/examples/github-pr-alerts-workflow/workflow.yml
+++ b/examples/github-pr-alerts-workflow/workflow.yml
@@ -35,6 +35,8 @@ jobs:
             ACTION="ready for review"
           elif [[ "${ACTION}" == "reopened" ]]; then
             ACTION="reopened"
+          elif [[ "${ACTION}" == "closed" && "${{ github.event.pull_request.merged }}" == "true" ]]; then
+            ACTION="merged"
           fi
 
           ESCAPED_TITLE=$(echo '${{ github.event.pull_request.title }}' | jq -rRs '.')
